--- a/css/styles.css
+++ b/css/styles.css
@@ -1303,10 +1303,11 @@ in home page */
 /* Styling the events page starts */
 
 .allBanner {
-    background-image: url("../img/banner-bg.webp");
+    background-image: url("../img/childrenSmiling.jpg");
     background-repeat: no-repeat;
     height: 300px;
     width: 100%;
+    background-size: cover;
 }
 
 .allBanner h2 {
@@ -1414,7 +1415,7 @@ main .event-content {
 /* banner image for campaign.html */
 
 .allBanner2 {
-    background-image: url("../img/banner-bg.webp");
+    background-image: url("../img/campaignBn.webp");
     background-repeat: no-repeat;
     height: 300px;
     width: 100%;
@@ -1459,7 +1460,7 @@ main .event-content {
 }
 
 .campaignsCenter .campaign1 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/10Nike.jpeg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/POVERTY.png");
     height: 450px;
     width: 85%;
     background-size: cover;
@@ -1505,7 +1506,7 @@ main .event-content {
 
 
 .campaignsCenter .campaign2 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/3WhiteRockandRole.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/drugs.webp");
     height: 450px;
     width: 85%;
     background-size: cover;
@@ -1571,7 +1572,7 @@ main .event-content {
 }
 
 .campaignsCenter2 .campaign1 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/about-banner.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/sex-Edu.jpg");
     height: 450px;
     width: 85%;
     background-size: cover;
@@ -1640,7 +1641,7 @@ main .event-content {
 
 
 .campaignsCenter2 .campaign2 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/10.jpeg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/politics-Edu.jpg");
     height: 450px;
     width: 85%;
     background-size: cover;
@@ -1689,9 +1690,10 @@ main .event-content {
 /* banner image for blog.html */
 
 .allBanner3 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.77)), url("../img/banner-bg.webp");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.77)), url("../img/blogBanner.jpg");
     background-repeat: no-repeat;
     height: 300px;
+    background-size: cover;
     width: 100%;
     text-align: center;
     color: var(--white);
@@ -1733,7 +1735,8 @@ main .event-content {
 
 .featured-one .firstFeature {
     margin-top: 15px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.77)), url("../img/3pink.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.77)), url("../img/holy-Spirit.jpg");
+    background-position: center;
     height: 350px;
     width: 90%;
     background-repeat: no-repeat;
@@ -1769,7 +1772,8 @@ main .event-content {
 
 .featured-one .secondFeature {
     margin-top: 15px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.77)), url("../img/10sneakersFoot.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.77)), url("../img/believers-class.jpg");
+    background-position: center;
     height: 350px;
     width: 90%;
     background-repeat: no-repeat;
@@ -1781,7 +1785,8 @@ main .event-content {
 
 .featured-one .thirdFeature {
     margin-top: 15px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.77)), url("../img/12.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.77)), url("../img/workers-train.webp");
+    background-position: center;
     height: 350px;
     width: 90%;
     background-repeat: no-repeat;
@@ -1794,7 +1799,8 @@ main .event-content {
 
 .featured-one .fourthFeature {
     margin-top: 15px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.77)), url("../img/9swaggystyles.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.77)), url("../img/children-Class.jpg");
+    background-position: center;
     height: 350px;
     width: 90%;
     background-repeat: no-repeat;
