--- a/css/styles.css
+++ b/css/styles.css
@@ -2037,7 +2037,8 @@ main .post-content .post-title a {
 
 
 .allBanner4 {
-    background-image: url("../img/banner-bg.webp");
+    background-image: url("../img/volunteerBanner.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
     width: 100%;
@@ -2071,7 +2072,8 @@ main .post-content .post-title a {
 /* Styling the banner section in about page starts */
 
 .allBanner5 {
-    background-image: url("../img/banner-bg.webp");
+    background-image: url("../img/about-church.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
     width: 100%;
@@ -2211,7 +2213,8 @@ main .post-content .post-title a {
 
 
 .allBanner6 {
-    background-image: url("../img/banner-bg.webp");
+    background-image: url("../img/call-church.jpeg");
+    background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
     width: 100%;
@@ -2298,7 +2301,7 @@ main .post-content .post-title a {
 
 .cont-image {
     /* background-image: linear-gradient(hsl(59, 99%, 33%), hsl(51, 89%, 36%)), url("../img/m-blog-1.jpg"); */
-    background-image: linear-gradient(rgba(0.7, 0.5, 0.1, 0.1), var(--chrome-yellow)), url(../img/banner-bg.webp);
+    background-image: linear-gradient(rgba(0.7, 0.5, 0.1, 0.1), var(--chrome-yellow)), url(../img/church-contact-2.jpg);
     height: 650px;
     width: 100%;
     background-size: cover;
@@ -2634,10 +2637,6 @@ come up and not stay down as it was before */
 
 @media (max-width: 550px) {
 
-    .navbar .navbar-list {
-        margin-top: -450px;
-        margin-bottom: 20px;
-    }
 
 
     .percent {
@@ -3524,6 +3523,8 @@ Real screen size for tablets
         display: none;
     } */
 
+    
+
     nav ul {
         float: right;
         width: 100%;
@@ -3701,6 +3702,15 @@ Real screen size for tablets
         display: none;
     }
 
+    .navbar .navbar-list {
+        margin-bottom: 10px;
+        margin-top: -520px;
+    }
+
+    .navbar .navbar-list .navbar-link {
+        margin-bottom: 5px;
+    }
+
 
 
 }
@@ -3709,6 +3719,9 @@ Real screen size for tablets
 /* The real screen size for mobile */
 
 @media only screen and (max-width: 400px) {
+
+
+
     .eventTypes .event-Time {
         display: inline-flex;
 
@@ -3782,6 +3795,16 @@ Real screen size for tablets
 
 
 @media only screen and (max-width: 500px) {
+    .navbar .navbar-list {
+        margin-bottom: 10px;
+        margin-top: -520px;
+    }
+
+    .navbar .navbar-list .navbar-link {
+        margin-bottom: 5px;
+    }
+
+
     .campaignsCenter2 .campaign2 {
         width: 100%;
         margin-top: 20px;
